Closed Bug 1612238 Opened 6 years ago Closed 6 years ago

Alt+Left and Alt+Right for Back and Forward have stopped working

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P1)

74 Branch
All
Windows
defect

Tracking

()

VERIFIED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox72 --- unaffected
firefox73 --- unaffected
firefox74 --- verified

People

(Reporter: me, Assigned: masayuki)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:74.0) Gecko/20100101 Firefox/74.0

Steps to reproduce:

Press Alt+Left or Alt+Right.

Actual results:

Nothing. (No navigation, no viewport scrolling.)

Expected results:

Alt+Left should have navigated backwards, and Alt+Right forwards.

This is a recent regression; I think the last build I was on was 2020-01-19 and it aworked then, but 2020-01-29 is broken.

Other relevant matters:

  • This is not a hardware problem: Alt+Left and Alt+Right are still working in other browsers.

  • This is not a webpage content problem (e.g. JavaScript intercepting the key combo): all pages are demonstrating the issue, including Firefox built-in pages and pages with no JavaScript.

  • Backspace for navigating backwards still works.

Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Component: Untriaged → DOM: UI Events & Focus Handling
Ever confirmed: true
Flags: needinfo?(masayuki)
Keywords: regression
Product: Firefox → Core
Regressed by: 1606655

Ah, simple mistake. Arrow keys are same scan code as some numpad keys except extended flags, but I forgot to check it.

Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Flags: needinfo?(masayuki)

Scan code values of numpad keys are same as End, ArrowDown, PageDown,
Insert, ArrowLeft, ArrowRight, Home, ArrowUp and PageUp. Only
the difference between them is that numpad keys are non-extended keys and
the others are extended keys. Therefore, IsTypingUnicodeScalarValue() needs
to check whether the key is not extended key or not.

Priority: -- → P1
OS: Unspecified → Windows
Hardware: Unspecified → All
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/e7c1df27d856 Make `NativeKey::IsTypingUnicodeScalarValue()` check `mIsExtended` r=m_kato

Updating the Flags for this issue, I was able to reproduce this issue only in Nightly 74.0a1, Release and Beta remain unaffected.

Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74

Thanks for the rapid fix, this is just what Nightly and using Nightly is for. 🙂

Reproduced the initial issue using an old Nightly build 74.0a1 (Build id: 20200131013147).
Verified - Fixed in latest Nightly build 74.0a1 (Build id: 20200202214642) using Windows 10.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: