Bug 1612238 - Make `NativeKey::IsTypingUnicodeScalarValue()` check `mIsExtended` r=m_kato

Scan code values of numpad keys are same as `End`, `ArrowDown`, `PageDown`,
`Insert`, `ArrowLeft`, `ArrowRight`, `Home`, `ArrowUp` and `PageUp`.  Only
the difference between them is that numpad keys are non-extended keys and
the others are extended keys.  Therefore, `IsTypingUnicodeScalarValue()` needs
to check whether the key is not extended key or not.

Differential Revision: https://phabricator.services.mozilla.com/D61264