widget/windows/KeyboardLayout.h
@@ -610,8 +610,8 @@ class MOZ_STACK_CLASS NativeKey final {
    * to input a Unicode character from its scalar value.
    */
   bool IsTypingUnicodeScalarValue() const {
-    return IsSysKeyDownOrKeyUpMessage() && IsAlt() && !IsControl() &&
-           !IsShift() &&
+    return !mIsExtended && IsSysKeyDownOrKeyUpMessage() && IsAlt() &&
+           !IsControl() && !IsShift() &&
            ((mScanCode >= 0x004F && mScanCode <= 0x0052) ||  // Numpad0-3
             (mScanCode >= 0x004B && mScanCode <= 0x004D) ||  // Numpad4-6
             (mScanCode >= 0x0047 && mScanCode <= 0x0049));   // Numpad7-9
